php laravel mysql added

--- a/index.html
+++ b/index.html
@@ -743,10 +743,21 @@
                       <div class="parcial">
                         <div class="info">
                           <div class="nome">PHP</div>
-                          <div class="percentagem-num">Learning</div>
+                          <div class="percentagem-num">100%</div>
                         </div>
                         <div class="progressBar">
-                          <div class="percentagem" style="width: 0%;"></div>
+                          <div class="percentagem" style="width: 100%;"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="candidatos">
+                      <div class="parcial">
+                        <div class="info">
+                          <div class="nome">MySql</div>
+                          <div class="percentagem-num">90%</div>
+                        </div>
+                        <div class="progressBar">
+                          <div class="percentagem" style="width: 50%;"></div>
                         </div>
                       </div>
                     </div>
@@ -754,10 +765,10 @@
                       <div class="parcial">
                         <div class="info">
                           <div class="nome">Laravel</div>
-                          <div class="percentagem-num">Learning</div>
+                          <div class="percentagem-num">50%</div>
                         </div>
                         <div class="progressBar">
-                          <div class="percentagem" style="width: 0%;"></div>
+                          <div class="percentagem" style="width: 50%;"></div>
                         </div>
                       </div>
                     </div>
